--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,7 +36,6 @@
   pages={1399--1401},
   year={2025},
   abstract={As part of a larger project to develop a generative artificial intelligence (GenAI) literacy framework and toolkit for higher education, this poster presents an analysis of seven literacy frameworks relevant to GenAI literacy in academic contexts. Through thematic analysis, we identified 10 competencies essential for GenAI-literate students in higher education. These competencies are organized into four progressive stages: (1) understanding GenAI at conceptual and technical levels and its capabilities and limitations; (2) using GenAI tools purposefully, effectively, and appropriately; (3) analyzing and evaluating various GenAI models and tools for performance and societal, ethical, and legal impacts, and (4) customizing or creating GenAI tools to address specific needs and generate innovative applications or theoretical insights. We discuss key implications of the results and next steps for developing a GenAI literacy framework for higher education.},
-  abbr={ConfProc},
   doi={https://doi.org/10.1002/pra2.1416},
   pdf={2025-ASIST-Abstract1.pdf},
   poster={2025-ASIST-Poster1.pdf},
@@ -71,7 +70,6 @@
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={Health information behavior research occupies a central position within the field of Library and Information Science (LIS), given its emphasis on the complex interaction between health-related information, human, and technology. While health information behavior research has been steadily progressing over time, it has undergone significant evolution with the advancement of digital technologies such as artificial intelligence. The goal of this panel is to bring together scholars who have actively contributed to health information behavior research, with a specific focus on the integration of Artificial Intelligence (AI) into health-related information and information behavior settings. Additionally, we will present our research on the current landscape of health information behavior, the applications of AI in researching health information behavior, its limitations, and its societal impact. These insights will spark discussions among participants and help foster a deeper understanding of the opportunities and the responsible use of AI technologies in health information behavior research.},
   doi={https://doi.org/10.1002/pra2.1390},
-  abbr={ConfProc},
   slides={2025-ASIST-Panel.pdf},
   preview={2025-ASIST-ConfProc.png}
 }
@@ -86,7 +84,6 @@
   doi={https://doi.org/10.1002/asi.24978},
   pdf={2025-JASIST.pdf},
   selected={true},
-  abbr={Journal},
   preview-={2025-76-13-jasist.jpg}
 }
 
@@ -102,7 +99,6 @@
   abstract={The introduction of ChatGPT has sparked significant interest and presented both great opportunities and challenges to higher education. While more students are using ChatGPT, little is known about their mental models for and sensemaking of the system, including the metaphors they use to understand the system. In this exploratory study, we interviewed 25 students at three universities in the US during the summer of 2023 to identify the metaphors they use for ChatGPT. Through qualitative analysis of the interview transcripts, we found that participants commonly used metaphors to make sense of ChatGPT. They compared ChatGPT to humans and popular technologies or tools, with being the most frequently Google mentioned. These findings highlight the potential for metaphor-based design and the development of AI literacy programs.},
   doi={https://doi.org/10.1002/pra2.1116}, 
   pdf={2024-ASIST-Abstract1.pdf},
-  abbr={ConfProc},
   preview={2024-ASIST-ConfProc.jpg}
 }
 
@@ -118,7 +114,6 @@
   abstract={While it is common for blind and visually impaired (BVI) users to use mobile devices to search for information, little research has explored the accessibility issues they encounter in their interactions with information retrieval systems, in particular digital libraries (DLs). This study represents one of the most comprehensive research projects, investigating accessibility issues, especially help-seeking situations BVI users face in their DL search processes. One hundred and twenty BVI users were recruited to search for information in six DLs on four types of mobile devices (iPhone, iPad, Android phone, and Android tablet), and multiple data collection methods were employed: questionnaires, think-aloud protocols, transaction logs, and interviews. This paper reports part of a large-scale study, including the categories of help-seeking situations BVI users face in their interactions with DLs, focusing on seven types of help-seeking situations related to visual interactions on mobile platforms: difficulty finding a toggle-based search feature, difficulty understanding a video feature, difficulty navigating items on paginated sections, difficulty distinguishing collection labels from thumbnails, difficulty recognizing the content of images, difficulty recognizing the content of graphs, and difficulty interacting with multilayered windows. Moreover, corresponding design recommendations are also proposed: placing meaningful labels for icon-based features in an easy-to-access location, offering intuitive and informative video descriptions for video players, providing structure information about a paginated section, separating collection/item titles from thumbnail descriptions, incorporating artificial intelligence image/graph recognition mechanisms, and limiting screen reader interactions to active windows. Additionally, the limitations of the study and future research are discussed.},
   doi={https://doi.org/10.3390/jimaging10080205},
   pdf={2024-JImage.pdf},
-  abbr={Journal},
   preview={2024-10-8-jimaging.png}
 
 }
@@ -136,7 +131,6 @@
   doi={https://doi.org/10.1002/pra2.1125},
   pdf={2024-ASIST-Abstract2.pdf},
   poster={2024-ASIST-Poster2.pdf},
-  abbr={ASIST},
   preview={2024-ASIST-ConfProc.jpg}
 }
 
@@ -153,7 +147,6 @@
   doi={https://doi.org/10.1016/j.ipm.2023.103321},
   pdf={2023-IPM.pdf},
   selected={true},
-  abbr={Journal},
   preview={ipm.jpg}
 }
 
@@ -169,7 +162,6 @@
   abstract={In this fast-aging society, many older adults fail to meet the required level of exercise due to trainer shortages. Therefore, we developed a robot tutor to investigate the feasibility of robot-mediated exercise for older adults. Twenty older adults participated in an experimental study. A pre-exercise survey was used to assess their background. Each participant experienced a 30-min robot-led Tai Chi exercise followed by a post-exercise survey to evaluate the easiness of following the robot and expectations for future robot design. Participants’ Tai Chi performances were evaluated in terms of completion and accuracy. Associations between the surveys and the performance were also analyzed. All participants completed the study. Fifteen out of the twenty subjects had at least one chronic condition, and most practiced Tai Chi before the study but had never interacted with a robot. On average, the participants scored 93.09 and 85.21 out of 100 for movement completion and accuracy, respectively. Their initial movement accuracy was correlated with their attitude towards exercise. Most subjects reported that they could follow the robot’s movements and speeches well and were interested in using a robot tutor in the community. The study demonstrated the initial feasibility of robot-led Tai Chi exercise for older adults.},
   doi={https://doi.org/10.3390/app13095306}, 
   pdf={2023-AS.pdf},
-  abbr={AS},
   preview={2023-AS.png}
 }
 
@@ -187,7 +179,7 @@
   pdf={2023-ASIST-ShortPaper.pdf},
   slides={2023-ASIST-ShortPaper-Slides.pdf},
   selected={true},
-  abbr={ASIST},
+  preview={2023-asist-am.jpg}
 }
 
 @article{choi2023preliminary,
@@ -203,7 +195,7 @@
   doi={https://doi.org/10.1002/pra2.901},
   pdf={2023-ASIST-Abstract.pdf},
   poster={2023-ASIST-Poster.pdf},
-  abbr={ASIST},
+  preview={2023-asist-am.jpg}
 }
 
 @article{choi2022design,
@@ -217,7 +209,6 @@
   doi={https://doi.org/10.20879/acr.2022.19.3.119},
   abstract={This study explored what makes users perceive a website as a credible source of health information and how web credibility assessment, in turn, influences their health information-seeking behaviors. Exploratory factor analysis was conducted with survey responses from college students (NN = 141) who assessed credibility markers of a website they normally visit to address health concerns. A 4-factor solution emerged as the best summary of the data: (a) content, (b) interaction design, (c) information design, and (d) source. Identified components were used in a linear model to explore the effects of different web credibility types on perceptual, attitudinal, and behavioral outcomes. Alongside content-related attributes (e.g., recency of the information), interaction design-related elements (e.g., ability to interact with other users) were significantly associated with most dependent variables examined in the study (e.g., trust in the information on the site, willingness to follow the advice, and willingness to recommend the site to others). Current results imply that users count on not only content-related cues or heuristics, but also interactive design features as helpful tools for mobilizing social resources (e.g., fellow users) to validate online health information. Theoretical and practical implications of the study findings and future research directions are discussed.},
   pdf={2022-ACR.pdf},
-  abbr={ACR},
 }
 
 @article{choi2022associations,
@@ -232,7 +223,6 @@
   doi={https://doi.org/10.1002/asi.24556},
   abstract={Given the aging world, it is important to understand older adults' everyday life information seeking (ELIS), which plays a vital role in healthy aging in later life. The present study analyzed national survey data collected by the Pew Research Center in 2016 based on Savolainen's ELIS model. The model's core concept, mastery of life, was measured in terms of general coping style to find information (cognitive vs. affective) and expectations about the findability of necessary information (optimistic vs. pessimistic). Weighted multiregression analyses were conducted to examine the associations between mastery of life and ELIS behavior of older Americans (65 years or older) in terms of breath and depth of interest in everyday topics, holding other sociocultural and demographic factors constant. The results showed a cognitive, as opposed to affective, coping style was associated with a wider range of ELIS topics and a deeper level of interest in political and cultural topics. However, whether an individual had an optimistic or pessimistic perspective toward information seeking was not associated with the variety or depth of interest in everyday topics. Neither dimension was related to the depth of interest in sports topics. Practical, theoretical, and methodological implications of the findings are provided.},
   pdf={2022-JASIST.pdf},
-  abbr={JASIST},
   preview={2022-73-3-jasist.jpg}
 }
 
@@ -247,7 +237,6 @@
   doi={https://doi.org/10.4017/gt.2022.21.1.798.12},
   abstract={Background: As our society gets older, the implications of information and communication technologies (ICT)-based healthcare have increased. Although the adoption of ICTs has dramatically changed the landscape of the health sector since the early 1950s, the benefits that ICTs could bring to dementia care have been relatively unexplored. Objective: This paper mined the research articles for insights into how relationships between ICTs and assistive technologies (ATs) in dementia care have been developed historically and should be cultivated in the future. Method: Using text-mining techniques, 2,030 journal articles regarding ATs in relation to ICTs in dementia care published from 1970 to 2020 were analyzed. The literature was retrieved from the Web of Science, PubMed, PsycINFO, and IEEE Xplore digital library. Results: Despite the active integration of ICTs in many other sectors, the literature demonstrated that research regarding ICT integration in ATs for dementia interventions occurred only after the 1990s. The analysis results also indicate that studies have moved toward supporting the aging-in-place of people with dementia, encompassing major research interests such as assisting with daily activities of living, modifying the home, and promoting recreational activities. A research gap was also identified in technology adoption to support the social interactions of those with dementia, which is a key part of enhancing the quality of life. Conclusion: The research that addressed ICT integration with ATs for dementia care has been evolving and moving from issues of safety and security to maintaining autonomy of people with dementia in their own place.},
   pdf={2022-Geron.pdf},
-  abbr={GERONTECH},
 }
 
 @article{lee2022respite,
@@ -261,7 +250,6 @@
   publisher={SAGE Publications Sage CA: Los Angeles, CA},
   doi={https://doi.org/10.1177/07334648221075620},
   abstract={This study examined factors related to respite service use among caregivers and further tested the moderating effect of dementia caregiver status in these relationships using nationally representative U.S. data. Logistic regression analyses were conducted among 1203 caregivers (276 dementia and 927 nondementia caregivers). Caregivers’ race and ethnicity as a predisposing factor, caregivers’ self-rated health as an enabling factor, and care recipients’ living arrangement and functional limitations as need factors were significantly related to respite service use. Moreover, dementia caregiver status moderated the association between enabling factors (i.e., household income, work status, and self-rated health) and respite service use. Our findings imply that dementia caregivers may be more in need of respite service use than nondementia caregivers when they have limited enabling factors (e.g., lower household income, nonworking status, poorer health). Policy and practice efforts that specifically support enabling factors are suggested to promote more respite service use among dementia caregivers.},
-  abbr={JAG},
 }
 
 @article{choi2022developing,
@@ -274,7 +262,7 @@
   pdf={2022-iConf-Abstract.pdf},
   poster={2022-iConf-Poster.pdf},
   video={https://drive.google.com/file/d/1eEhqiOi3d_I32uTkx8DWrYtmA_uJ6jIN/view?usp=drive_link},
-  abbr={iConf},
+  preview={ideals.png}
 }
 
 @article{wang2021feature,
@@ -287,7 +275,6 @@
   publisher={Elsevier},
   doi={https://doi.org/10.1016/j.ijmedinf.2021.104598},
   abstract={Background and objective: Diabetes and hypertension are two prevalent and related chronic conditions. To inform the design and development of mobile health applications (mHealth apps) for people living with multiple chronic conditions, this paper examines features mentioned in developers’ descriptions and user reviews of mHealth apps, along with users’ attitudes toward associated features. Materials and methods: Eleven top apps for diabetes and hypertension were identified from Google Play as of January 2020. Based on a stratified sampling strategy, 1,100 user reviews were selected to form the final dataset. Developers’ descriptions were also collected for analysis. Using the grounded theory approach, we developed a feature-oriented coding scheme, which was used to identify three levels of features mentioned in app descriptions and user reviews: feature group (the highest level), feature type (the second level), and individual feature (the lowest level). Users’ attitudes toward app features mentioned in user reviews were also analyzed. Results: Most top-rated apps for diabetes and hypertension under study were multifeatured, incorporating self-management, information sharing, and decision support features. At the feature-group level, most informative user reviews commented on features related to self-management, followed by decision support and information sharing. The four most frequently mentioned feature types were data entry, data export/import, data visualization, and assessment. Users expressed overwhelming positive attitudes toward app features across all feature categories. Based on users’ assessments of existing features and requests for additional features, design implications for app development are provided. Conclusions: Despite the diversity of app features provided by mHealth apps and users’ primarily positive attitudes toward existing app features, more comprehensive and personalized features are expected by app users to satisfy their health needs. Beyond identifying app features in user reviews, future research may seek more in-depth feedback from real-life patients for app development and design using methods like interviews and focus groups, to further enhance the overall quality of relevant mHealth apps to better support users.},
-  abbr={IJMI},
 }
 
 @article{choi2020validating,
@@ -302,7 +289,6 @@
   doi={https://doi.org/10.1002/pra2.357},
   abstract={This methodology poster introduces an ongoing study seeking to validate an extended typology of web credibility assessments proposed by Choi and Stvilia (2015) using online surveys. The study focuses on health-related topics as an important subject domain for web credibility assessments. The poster describes the study's theoretical background and methodology, especially the process of developing and testing the online survey questionnaire, which consists of 89 questions in five sections: internet use and experience, health information seeking, web credibility assessment, outcomes of web credibility assessment, and demographic factors. A pretest of the online survey questionnaire was conducted with eight doctoral students, in which each participant answered the questions and provided feedback on the survey design. Pretest results and future research directions are discussed.},
   pdf={2020-ASIST-Poster.pdf},
-  abbr={ASIST},
 }
 
 @article{choi2020older,
@@ -406,7 +392,7 @@
   doi={https://doi.org/10.1016/j.lisr.2019.100983},
   abstract={Health information seeking is an important part of older adults' everyday lives as they cope with their health conditions. Semi-structured interviews conducted with 21 older adults in the United States were analyzed using Savolainen's everyday life information seeking (ELIS) model, especially its key concepts such as way of life and mastery of life. The interview data revealed that except for health care providers, a spouse or partner was mentioned as a credible interpersonal source of health information among older adults in a marital or romantic relationship. Characteristics of older adults' health information behavior in the ELIS context were identified based on types of way of life and mastery of life. For example, those who had more varied types of hobbies, including cognitive, affective, and social hobbies, were exposed to diverse people as they performed their daily routine, potentially resulting in different sources of useful health information. In couple relationships, those with an optimistic as opposed to pessimistic attitude toward a problem-solving situation played the information provider role rather than information receiver role.},
   pdf={2019-LISR.pdf},
-  abbr={LISR},
+  preview={lisr.jpg}
 }
 
 @article{tulu2017framework,
