--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
   Originality. This study offers a data-driven update to a 21-criterion credibility model, identifying the most influential criteria in terms of conceptual importance and applicability in evaluating the trustworthiness and expertise of information on peer-based, collaborative platforms. Also, it suggests potential to extend the framework to emerging environments such as generative artificial intelligence, where criteria like reference reliability remain relevant.},
   selected={true},
   doi={https://doi.org/10.1108/EL-05-2025-0188},
-  pdf={2025-TEL-Preprint.pdf},
+  preprint={2025-TEL-Preprint.pdf},
   preview={el.png}
 }
 
