--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -83,7 +83,7 @@
   doi={https://doi.org/10.1002/asi.24978},
   pdf={2025-JASIST.pdf},
   selected={true},
-  preview-={2025-76-13-jasist.jpg}
+  preview={2025-76-13-jasist.jpg}
 }
 
 @article{an2024college,
